2017-03-24  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

PR tree-optimization/80158
	* gimple-ssa-strength-reduction.c (replace_mult_candidate): When
	replacing a candidate statement, also replace it for the
	candidate's alternate interpretation.
	(replace_rhs_if_not_dup): Likewise.
	(replace_one_candidate): Likewise.

	* gfortran.fortran-torture/compile/pr80158.f: New file.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@246439 138bc75d-0d04-0410-961f-82ee72b054a4